# ur5_simulation

./: README.md
Geomagic_Touch_ROS2/omni_common/: CMakeLists.txt  package.xml
Geomagic_Touch_ROS2/omni_common/launch/: dual_omni_state.launch.py  omni_state.launch.py  omni_state_iz.launch.py
Geomagic_Touch_ROS2/omni_common/src/: omni_state.cpp  omni_state_der.cpp  omni_state_iz.cpp
Geomagic_Touch_ROS2/omni_description/rviz/: aubot.rviz
Tesis_Doc/: main.aux  main.bbl  main.fdb_latexmk  main.fls  main.lof  main.lot  main.out  main.tex  main.toc  referencias.bib  tesisutec.cls
Tesis_Doc/secciones/: abstract.tex  anexos.tex  capitulo1.tex  capitulo2.tex  capitulo3.tex  capitulo4.tex  capitulo4_anterior.tex  capitulo5.tex  conclusiones.tex  introduccion.tex  recomendaciones.tex  resumen.tex
geomagic_interface/: CMakeLists.txt  package.xml
geomagic_interface/include/geomagic_interface/: geomagic_processor.hpp
geomagic_interface/src/: geomagic_processor.cpp
griper_control/: CMakeLists.txt  package.xml
griper_control/launch/: gripper_modular.launch.py
griper_control/launch/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
griper_control/launch/log/: latest_build
griper_control/msg/: GripperCommand.msg
griper_control/src/: button_to_gripper_node.cpp  gripper.cpp  gripper_controller_node.cpp
impedancia_linea/: output_data_esfuerzo.txt  output_data_impedancia.txt
impednacia_circunferencia/: output_data_esfuerzo.txt  output_data_impedancia.txt  output_data_velocidad.txt
implementación cirugia/: graficas_costura.py
launch/: ur5_control.launch.py
ur5_bringup/: CMakeLists.txt  package.xml
ur5_bringup/launch/: ur5_bringup.launch.py
ur5_control_panel/: package.xml  setup.cfg  setup.py
ur5_control_panel/ur5_control_panel/: main_window.py
ur5_controller/: CMakeLists.txt  package.xml
ur5_controller/include/ur5_controller/: structs.hpp
ur5_controller/src/: controller_node.cpp  controller_node_backup.cpp  formulas.ipynb  graficadora.py  manual_ik_node.cpp  ur5_pos.cpp
ur5_controller/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ur5_controller/src/log/: latest_build
ur5_description/: CMakeLists.txt  package.xml
ur5_description/config/ur5/: visual_parameters.yaml
ur5_description/config/ur5e/: visual_parameters.yaml
ur5_description/launch/: view_ur.launch.py
ur5_description/meshes/ur5/visual/: wrist3.dae
ur5_description/urdf/: ur.ros2_control.xacro  ur.urdf.xacro  ur2.urdf.xacro  ur_macro.xacro
ur5_dynamics_pinocchio/: CMakeLists.txt
ur5_dynamics_pinocchio/src/: plot_data_smc.py  ur5_dynamics_node.cpp
ur5_impedance/: CMakeLists.txt  package.xml
ur5_impedance/include/ur5_impedance/: impedance.hpp
ur5_impedance/src/: impedance.cpp
ur5_implementation/ur5_dual/: CMakeLists.txt  package.xml
ur5_implementation/ur_moveit_config/launch/: ur_moveit.launch.py
ur5_implementation/ur_moveit_config/srdf/: ur_macro.srdf.xacro
ur5_implementation/ur_robot_driver/config/: ur_controllers_ur5.yaml  ur_controllers_ur5e.yaml
ur5_implementation/ur_robot_driver/launch/: dual_control.launch.py  test_forward_velocity_controller.launch.py  ur_control.launch.py
ur5_implementation/ur_robot_driver/rviz/: view_robot.rviz
ur5_kinematics/: CMakeLists.txt  package.xml
ur5_kinematics/include/ur5_kinematics/: kinematics.hpp
ur5_kinematics/src/: hqp_kinematics.cpp  kinematics.cpp
ur5_kinematics/urdf/: ur5e.urdf
ur5_simulation/: CMakeLists.txt  package.xml
ur5_simulation/config/: ur_controllers_ur5.yaml  ur_controllers_ur5e.yaml
ur5_simulation/include/: config.txt  functions.hpp
ur5_simulation/launch/: bringup_ur_sim.launch.py  multi_robot.launch.py  output_data_esfuerzo.txt  output_data_impedancia.txt  output_data_velocidad.txt  ur_sim_control.launch.py  ur_sim_moveit.launch.py
ur5_simulation/nodes/: moveit_planner.py
ur5_simulation/src/: graficas.py  gripper.cpp  ur5_ik_node.cpp  ur5_impedance.cpp
ur5_sliding/: CMakeLists.txt  package.xml
ur5_sliding/include/ur5_sliding/: sliding.hpp
ur5_sliding/src/: sliding.cpp
