<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur5_controller</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="david@todo.todo">david</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>omni_msgs</depend>
  <depend>std_msgs</depend>
  <depend>pinocchio</depend>
  <depend>ament_index_cpp</depend>
  <depend>geomagic_interface</depend>
  <depend>ur5_kinematics</depend>
  <depend>ur5_impedance</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
